feat(batch): Split examples in powertools batch sam and sam-graalvm